# rust-srec

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build-binaries.yml  ci.yml  dev.yml  main.yml  pr.yml  release-mesio.yml  release-rust-srec.yml  release-strev.yml
benches/: test_channels.rs
crates/aac/: Cargo.toml
crates/aac/src/: lib.rs  packet.rs
crates/amf0/: Cargo.toml
crates/amf0/src/: decode.rs  define.rs  encode.rs  errors.rs  lib.rs
crates/av1/: Cargo.toml
crates/av1/src/: config.rs  lib.rs  tests.rs
crates/bytes-util/: Cargo.toml
crates/bytes-util/src/: bit_read.rs  bit_write.rs  bytes_cursor.rs  lib.rs  nal_emulation_prevention.rs  range_check.rs
crates/expgolomb/: Cargo.toml
crates/flv/: Cargo.toml
crates/flv-fix/: Cargo.toml  build.rs
crates/flv-fix/src/: adapter.rs  analyzer.rs  constants.rs  context.rs  error.rs  lib.rs  pipeline.rs  script_modifier.rs  test_utils.rs  writer.rs  writer_task.rs
crates/flv-fix/src/operators/: defragment.rs  gop_sort.rs  header_check.rs  limit.rs  mod.rs  script_filler.rs  script_filter.rs  split.rs  time_consistency.rs  timing_repair.rs
crates/flv-fix/src/utils/: file_utils.rs  mod.rs  template.rs
crates/flv/src/: aac.rs  audio.rs  av1.rs  avc.rs  buffer.rs  data.rs  error.rs  file.rs  header.rs  hevc.rs  lib.rs  parser.rs  parser_async.rs  resolution.rs  script.rs  tag.rs  video.rs  writer.rs  writer_async.rs
crates/h264/: Cargo.toml
crates/h264/src/: config.rs  io.rs  lib.rs
crates/h264/src/enums/: aspect_ratio_idc.rs  mod.rs  nal_unit_type.rs  video_format.rs
crates/h264/src/sps/: chroma_sample_loc.rs  color_config.rs  frame_crop_info.rs  mod.rs  pic_order_count_type1.rs  sample_aspect_ratio.rs  sps_ext.rs  timing_info.rs
crates/h265/: Cargo.toml
crates/h265/src/: config.rs  lib.rs  nal_unit_header.rs  rbsp_trailing_bits.rs  sps.rs  tests.rs
crates/h265/src/enums/: aspect_ratio_idc.rs  constant_frame_rate.rs  mod.rs  nal_unit_type.rs  num_temporal_layers.rs  parallelism_type.rs  profile_compatibility_flags.rs  video_format.rs
crates/h265/src/snapshots/: h265__config__tests__config_demux.snap
crates/h265/src/sps/: conformance_window.rs  long_term_ref_pics.rs  mod.rs  pcm.rs  profile_tier_level.rs  scaling_list.rs  sps_3d_extension.rs  sps_multilayer_extension.rs  sps_range_extension.rs  sps_scc_extension.rs  st_ref_pic_set.rs  sub_layer_ordering_info.rs
crates/h265/src/sps/snapshots/: h265__sps__tests__sps_parse.snap  h265__sps__tests__sps_parse2.snap  h265__sps__tests__sps_parse3.snap  h265__sps__tests__sps_parse4.snap  h265__sps__tests__sps_parse5.snap  h265__sps__tests__sps_parse6.snap  h265__sps__tests__sps_parse_inter_ref_prediction.snap
crates/h265/src/sps/vui_parameters/: hrd_parameters.rs  mod.rs
crates/hls/: Cargo.toml
crates/hls-fix/: Cargo.toml
crates/hls-fix/src/: analyzer.rs  lib.rs  pipeline.rs  writer_task.rs
crates/hls-fix/src/operators/: defragment.rs  mod.rs  segment_limiter.rs  segment_split.rs
crates/hls/examples/: debug_hls_ts.rs  debug_ts.rs  memory_efficient_analysis.rs  optimized_segment_analysis.rs  simple_ts_test.rs  ts_analysis.rs
crates/hls/src/: lib.rs  resolution.rs  segment.rs  segment_parser.rs
crates/mesio/: Cargo.toml  README.md
crates/mesio/src/: builder.rs  bytes_stream.rs  config.rs  downloader.rs  error.rs  factory.rs  lib.rs  media_protocol.rs  protocol_builder.rs  proxy.rs  source.rs
crates/mesio/src/cache/: manager.rs  mod.rs  types.rs  utils.rs
crates/mesio/src/cache/providers/: file.rs  memory.rs  mod.rs  provider.rs
crates/mesio/src/flv/: error.rs  flv_config.rs  flv_downloader.rs  mod.rs
crates/mesio/src/hls/: config.rs  coordinator.rs  decryption.rs  error.rs  events.rs  fetcher.rs  hls_downloader.rs  mod.rs  output.rs  playlist.rs  processor.rs  scheduler.rs  segment_utils.rs  twitch_processor.rs
crates/pipeline-common/: Cargo.toml
crates/pipeline-common/benches/: channel_benchmark.rs  cloning_benchmark.rs  dispatch_benchmark.rs
crates/pipeline-common/examples/: pipeline_usage.rs
crates/pipeline-common/src/: config.rs  context.rs  lib.rs  pipeline.rs  processor.rs  progress.rs  split_reason.rs  template.rs  test_utils.rs  writer_task.rs  writer_task_common.rs
crates/pipeline-common/src/utils/: files.rs  mod.rs  tracing.rs
crates/platforms-cli/: Cargo.toml  README.md
crates/platforms-cli/src/: cli.rs  commands.rs  config.rs  error.rs  main.rs  output.rs
crates/siphon/: Cargo.toml
crates/siphon/src/: downloader.rs  error.rs  flv_downloader.rs  lib.rs  proxy.rs  utils.rs
crates/tars-codec/: Cargo.toml  README.md
crates/tars-codec/examples/: allocation_demo.rs
crates/tars-codec/src/: codec.rs  de.rs  error.rs  lib.rs  pool.rs  ser.rs  simd.rs  types.rs
crates/ts/: Cargo.toml  README.md
crates/ts/benches/: parser_benchmark.rs
crates/ts/examples/: zero_copy_demo.rs
crates/ts/src/: error.rs  lib.rs  packet.rs  parser_owned.rs  parser_zero_copy.rs  pat.rs  pmt.rs  zero_copy.rs
mesio-cli/: Cargo.toml  README.md
mesio-cli/src/: cli.rs  config.rs  error.rs  main.rs
mesio-cli/src/output/: pipe_flv_strategy.rs  pipe_hls_strategy.rs  provider.rs
mesio-cli/src/processor/: flv.rs  generic.rs  hls.rs  mod.rs
mesio-cli/src/utils/: files.rs  headers.rs  mod.rs  progress.rs  size.rs  time.rs
rust-srec/docs/: package.json  pnpm-lock.yaml  release-notes-body.md  release-notes.md
rust-srec/frontend/: package.json  pnpm-lock.yaml
rust-srec/migrations/: 20260301103000_add_session_segments.sql
rust-srec/proto/: download_progress.proto
rust-srec/src-tauri/: Cargo.toml
scripts/: bump-rust-srec-version.mjs
siphon-cli/: Cargo.toml
siphon-cli/src/: cli.rs  config.rs  main.rs
siphon-cli/src/processor/: mod.rs  url.rs
siphon-cli/src/utils/: progress.rs
src/: cli.rs  config.rs  error.rs  main.rs  utils.rs
src/processor/: file.rs  mod.rs  url.rs
src/utils/: mod.rs  progress.rs  size.rs  template.rs  time.rs
strev-cli/: Cargo.toml  README.md
strev-cli/src/: cli.rs  commands.rs  config.rs  error.rs  main.rs  output.rs
(+58 files in other folders)
