[workspace]
resolver = "3"

members = [
    "siphon-cli",
    "crates/flv",
    "crates/flv-fix",
    "crates/siphon",
    "crates/aac",
    "crates/bytes-util",
    "crates/expgolomb",
    "crates/av1",
    "crates/h265",
    "crates/amf0",
    "crates/platforms",
    "crates/tars-codec",
    "crates/platforms-cli",
]

[profile.release]
lto = true
codegen-units = 1
strip = true
