[workspace]
resolver = "3"

members = [
    "mesio-cli",
    "strev-cli",
    "crates/flv",
    "crates/flv-fix",
    "crates/hls",
    "crates/hls-fix",
    "crates/mesio",
    "crates/aac",
    "crates/bytes-util",
    "crates/expgolomb",
    "crates/av1",
    "crates/h265",
    "crates/h264",
    "crates/amf0",
    "crates/platforms",
    "crates/tars-codec",
    "crates/pipeline-common",
    "crates/ts",
]

[workspace.package]
authors = ["hua0512"]
repository = "https://github.com/hua0512/rust-srec"
license = "MIT OR Apache-2.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"   # Removes panic unwinding code
debug = false


[profile.dev]
# Keep debug info for development
debug = true
