[package]
name = "mesio"
version = "0.3.9"
edition.workspace = true
description = "Mesio (media) streaming downloader CLI"
license.workspace = true
repository = "https://github.com/hua0512/rust-srec"

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "sync"] }
tokio-util = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
crossterm = "0.29.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"] }
tracing-appender = { workspace = true }
tracing-indicatif = "0.3"

# Workspace crates
pipeline-common = { path = "../crates/pipeline-common" }
flv = { path = "../crates/flv" }
flv-fix = { path = "../crates/flv-fix" }
hls = { path = "../crates/hls" }
hls-fix = { path = "../crates/hls-fix" }
mesio-engine = { path = "../crates/mesio", features = ["clap"] }
indicatif = "0.18.4"
thiserror = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
m3u8-rs = { workspace = true }

[features]
default = []

# Opt-in: use vendored OpenSSL for native-tls (static/musl builds).
static-ssl = ["mesio-engine/static-ssl"]

# Opt-in: enable native-tls fallback for legacy TLS endpoints.
tls-native-fallback = ["mesio-engine/tls-native-fallback"]
