[package]
name = "flv-fix"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
byteorder = "1.5.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["io", "codec"] }
tokio-stream = "0.1.17"
futures = "0.3"
bytes-util = { path = "../bytes-util" }
flv = { path = "../flv" }
amf0 = { path = "../amf0" }
crc32fast = "1.4.2"
async-stream = "0.3.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.12"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
