[package]
name = "flv"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
byteorder = "1.5.0"
nom = "8"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["io", "codec"] }
tokio-stream = "0.1.17"
futures = "0.3"
bytes-util = { path = "../bytes-util" }
amf0 = { path = "../amf0" }
av1 = { path = "../av1" }
h264 = { path = "../h264" }
h265 = { path = "../h265" }
log = "0.4"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
