[package]
name = "flv"
version = "0.1.2"
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }
tokio-util = { workspace = true, features = ["io", "codec"] }
futures = { workspace = true, features = ["std"] }
bytes-util = { path = "../bytes-util" }
amf0 = { path = "../amf0" }
av1 = { path = "../av1" }
h264 = { path = "../h264" }
h265 = { path = "../h265" }
pipeline-common = { path = "../pipeline-common" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
