[package]
name = "hls-fix"
version = "0.1.0"
edition = "2024"
description = "HLS processing toolkit"

[dependencies]
bytes = "1.10.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["io", "codec"] }
tokio-stream = "0.1.17"
futures = "0.3"
bytes-util = { path = "../bytes-util" }
m3u8-rs = "6.0.0"
hls = { path = "../hls" }
pipeline-common = { path = "../pipeline-common" }
crc32fast = "1.4.2"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.12"
chrono = "0.4.27"
ts = { path = "../ts" }
h264 = { path = "../h264" }
h265 = { path = "../h265" }


[dev-dependencies]
tempfile = "3.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
