[package]
name = "hls-fix"
version = "0.1.1"
edition = "2024"
description = "HLS processing toolkit"

[dependencies]
bytes = "1.10.1"
m3u8-rs = "6.0.0"
hls = { path = "../hls" }
pipeline-common = { path = "../pipeline-common" }
crc32fast = "1.4.2"
tracing = "0.1"
thiserror = "2.0.12"
crossbeam-channel = "0.5.15"


[dev-dependencies]
tracing-subscriber = "0.3"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
