[package]
name = "hls"
version = "0.1.2"
edition.workspace = true
description = "HLS (HTTP Live Streaming) format handling"
license.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
bytes = { workspace = true }
m3u8-rs = { workspace = true }
ts = { path = "../ts" }
mp4 = { path = "../mp4" }
h264 = { path = "../h264" }
h265 = { path = "../h265" }
media-types = { path = "../media-types" }
pipeline-common = { path = "../pipeline-common" }
tracing = { workspace = true }
memchr = { workspace = true }

[[example]]
name = "ts_analysis"
path = "examples/ts_analysis.rs"

[[example]]
name = "simple_ts_test"
path = "examples/simple_ts_test.rs"

[[example]]
name = "debug_ts"
path = "examples/debug_ts.rs"

[[example]]
name = "debug_hls_ts"
path = "examples/debug_hls_ts.rs"

[[example]]
name = "memory_efficient_analysis"
path = "examples/memory_efficient_analysis.rs"

[[example]]
name = "optimized_segment_analysis"
path = "examples/optimized_segment_analysis.rs"
