[package]
name = "mesio-engine"
version = "0.1.2"
edition = "2024"
description = "Mesio (media) streaming downloader engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hua0512/rust-srec"

[dependencies]
bytes = "1.10.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "io-util"] }
tokio-stream = "0.1.17"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "tls12",
] }
rustls-platform-verifier = "0.5.1"
url = "2.4"
async-stream = "0.3"
async-trait = "0.1"
thiserror = "1.0"
m3u8-rs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
humansize = "2.0.0"
rand = "0.9.1"
lru = "0.14"
moka = { version = "0.12", features = ["future"] }
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
hex = "0.4"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Workspace crates
flv = { path = "../flv" }
flv-fix = { path = "../flv-fix" }
hls = { path = "../hls" }
hls-fix = { path = "../hls-fix" }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "time"] }
