[package]
name = "mesio-engine"
version = "0.2.0"
edition.workspace = true
description = "Mesio (media) streaming downloader engine"
license.workspace = true
repository = "https://github.com/hua0512/rust-srec"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util"] }
tokio-util = { workspace = true }
tokio-stream = "0.1.18"
futures = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "stream",
    "system-proxy",
    "socks",
    "gzip",
    "brotli",
    "deflate"
] }
url = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
m3u8-rs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
rustls = { workspace = true }
moka = { version = "0.12", features = ["future", "sync"] }
aes = "=0.9.0-rc.4"
cbc = "=0.2.0-rc.3"
cipher = "0.5"
hex = { workspace = true }
clap = { version = "4.5", features = ["derive"], optional = true }
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tracing-indicatif = "0.3"
indicatif = "0.18"

# Workspace crates
flv = { path = "../flv" }
hls = { path = "../hls" }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time"] }

[features]
default = []

# Optional CLI integration (enabled by mesio-cli)
clap = ["dep:clap"]

# Opt-in: enable a native-tls reqwest client for legacy endpoints.
tls-native-fallback = ["reqwest/native-tls"]

# Opt-in: use vendored OpenSSL for native-tls (useful for static/musl builds).
static-ssl = ["tls-native-fallback", "reqwest/native-tls-vendored"]
