[package]
name = "pipeline-common"
version = "0.1.1"
edition = "2024"
description = "Common traits and implementations for media processing pipelines"
license = "MIT"


[dependencies]
thiserror = "2.0"
tracing = "0.1"
chrono = "0.4.41"

[dev-dependencies]
tracing-subscriber = "0.3"
tempfile = "3.20.0"
