[package]
name = "pipeline-common"
version = "0.1.1"
edition = "2024"
description = "Common traits and implementations for media processing pipelines"
license = "MIT"


[dependencies]
thiserror = "2.0"
tracing = "0.1"
time = { version = "0.3.41", features = ["local-offset"] }
crossbeam-channel = "0.5.15"

[dev-dependencies]
tracing-subscriber = "0.3"
tempfile = "3.20.0"
criterion = "0.7.0"
flume = "0.11.1"

[[bench]]
name = "cloning_benchmark"
harness = false

[[bench]]
name = "channel_benchmark"
harness = false


[[bench]]
name = "dispatch_benchmark"
harness = false
