[package]
name = "siphon"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3"
# chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.4"
async-stream = "0.3"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Workspace crates
flv = { path = "../flv" }
flv-fix = { path = "../flv-fix" }

# [dev-dependencies]
