[package]
name = "siphon-engine"
version = "0.1.1"
edition = "2024"

[dependencies]
bytes = "1.10.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "io-util"] }
futures = "0.3"
# chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "tls12",
] }
rustls-platform-verifier = "0.5.1"
url = "2.4"
async-stream = "0.3"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Workspace crates
flv = { path = "../flv" }
flv-fix = { path = "../flv-fix" }

# [dev-dependencies]
