[package]
name = "ts"
version = "0.1.0"
authors = ["hua0512"]
repository = "https://github.com/hua0512/rust-srec"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
bytes = "1.7"
thiserror = "2.0"

[dev-dependencies]
hex = "0.4"

[[example]]
name = "zero_copy_demo"
path = "examples/zero_copy_demo.rs"

