[package]
name = "ts"
version = "0.1.0"
authors = ["hua0512"]
repository = "https://github.com/hua0512/rust-srec"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
bytes = "1.10.1"
memchr = "2.7.5"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "parser_benchmark"
harness = false


